source/objects/Bluescape_Wall__c/Bluescape_Wall__c.object-meta.xml
<CustomObject>
    <description>A granular look at what each Bluescape wall consists of including assets and specific components</description>
    <label>Bluescape Wall</label>
    <nameField>
        <label>Bluescape Host Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bluescape Walls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>