source/objects/Bluescape_Wall__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associate wall to a specific account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bluescape Walls</relationshipLabel>
    <relationshipName>Bluescape_Walls</relationshipName>
    <type>Lookup</type>
</CustomField>