source/objects/Bluescape_Wall__c/fields/AV_Control_System__c.field-meta.xml
<CustomField>
    <fullName>AV_Control_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Please indicate whether or not wall is using an AV Control System</description>
    <inlineHelpText>Please indicate whether or not wall is using an AV Control System</inlineHelpText>
    <label>AV Control System</label>
    <type>Checkbox</type>
</CustomField>