source/objects/Bluescape_Wall__c/fields/AV_Control_System_Type__c.field-meta.xml
<CustomField>
    <fullName>AV_Control_System_Type__c</fullName>
    <description>If AV Control System is checked, specify type of AV Control System</description>
    <inlineHelpText>If AV Control System is checked, specify type of AV Control System</inlineHelpText>
    <label>AV Control System Type</label>
    <type>TextArea</type>
</CustomField>