source/objects/Bluescape_Wall__c/fields/Bluescape_Wall_Name__c.field-meta.xml
<CustomField>
    <fullName>Bluescape_Wall_Name__c</fullName>
    <label>Bluescape Wall Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>