source/objects/Bluescape_Wall__c/fields/Chipset__c.field-meta.xml
<CustomField>
    <fullName>Chipset__c</fullName>
    <inlineHelpText>If Tiki, indicate the controller&#39;s chipset</inlineHelpText>
    <label>Chipset</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controller_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>z77</fullName>
            </value>
            <value>
                <fullName>z87</fullName>
            </value>
            <value>
                <fullName>z97</fullName>
            </value>
            <value>
                <fullName>z170</fullName>
            </value>
            <value>
                <fullName>z270</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>