source/objects/Bluescape_Wall__c/fields/Connection_Type__c.field-meta.xml
<CustomField>
    <fullName>Connection_Type__c</fullName>
    <inlineHelpText>Indicate wall network type</inlineHelpText>
    <label>Connection Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Ethernet</fullName>
                <default>true</default>
                <label>Ethernet</label>
            </value>
            <value>
                <fullName>Wireless</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>