source/objects/Bluescape_Wall__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associate a technical contact with the wall</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Bluescape Walls</relationshipLabel>
    <relationshipName>Bluescape_Walls</relationshipName>
    <type>Lookup</type>
</CustomField>