source/objects/Bluescape_Wall__c/fields/Controller_Type__c.field-meta.xml
<CustomField>
    <fullName>Controller_Type__c</fullName>
    <description>Indicate whether the wall is composed of a Tiki or AHPC controller</description>
    <inlineHelpText>Indicate whether the wall is composed of a Tiki or AHPC controller</inlineHelpText>
    <label>Controller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiki</fullName>
            </value>
            <value>
                <fullName>AHPC</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>