source/objects/Bluescape_Wall__c/fields/Demo_Unit__c.field-meta.xml
<CustomField>
    <fullName>Demo_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the wall is a demo unit</description>
    <inlineHelpText>Check the box if the wall is a demo unit</inlineHelpText>
    <label>Demo Unit</label>
    <type>Checkbox</type>
</CustomField>