source/objects/Bluescape_Wall__c/fields/Inogeni_Count__c.field-meta.xml
<CustomField>
    <fullName>Inogeni_Count__c</fullName>
    <description>Indicate the number of Inogenis configured to the wall</description>
    <inlineHelpText>Indicate the number of Inogenis configured to the wall</inlineHelpText>
    <label>Inogeni Count</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controller_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>