source/objects/Bluescape_Wall__c/fields/IP_Address__c.field-meta.xml
<CustomField>
    <fullName>IP_Address__c</fullName>
    <description>IP address of the controller</description>
    <inlineHelpText>If static, enter the IP address of the controller</inlineHelpText>
    <label>IP Address</label>
    <type>TextArea</type>
</CustomField>