source/objects/Bluescape_Wall__c/fields/IP_Type__c.field-meta.xml
<CustomField>
    <fullName>IP_Type__c</fullName>
    <description>Indicate whether the controller is assigned to a dynamic or static ip</description>
    <inlineHelpText>Indicate whether the controller is assigned to a dynamic or static IP</inlineHelpText>
    <label>IP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dynamic</fullName>
                <default>true</default>
                <label>Dynamic</label>
            </value>
            <value>
                <fullName>Static</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>