source/objects/Bluescape_Wall__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>State the address or general location of the wall in relation to other walls</description>
    <inlineHelpText>State the address or general location of the wall in relation to other walls</inlineHelpText>
    <label>Location</label>
    <type>TextArea</type>
</CustomField>