source/objects/Bluescape_Wall__c/fields/Monitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Monitor_Type__c</fullName>
    <description>Specify the primary manufacturer of the wall monitor(s)</description>
    <inlineHelpText>Specify the primary manufacturer of the wall monitor(s)</inlineHelpText>
    <label>Monitor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>3M</fullName>
            </value>
            <value>
                <fullName>Avocor</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Multitaction</fullName>
            </value>
            <value>
                <fullName>Optika</fullName>
                <default>true</default>
                <label>Optika</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Planar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>