source/objects/Bluescape_Wall__c/fields/Mounting_Type__c.field-meta.xml
<CustomField>
    <fullName>Mounting_Type__c</fullName>
    <inlineHelpText>Indicate whether the wall is installed on an easel or mounted on a wall</inlineHelpText>
    <label>Mounting Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easel</fullName>
            </value>
            <value>
                <fullName>Wall mounted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>