source/objects/Bluescape_Wall__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <description>Controller installed operating system</description>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12.04</fullName>
                <default>true</default>
                <label>12.04</label>
            </value>
            <value>
                <fullName>16.04</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>