source/objects/Bluescape_Wall__c/fields/Other_Monitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Monitor__c</fullName>
    <label>Other Monitor Type</label>
    <type>TextArea</type>
</CustomField>