source/objects/Bluescape_Wall__c/fields/Other_Speaker_Type__c.field-meta.xml
<CustomField>
    <fullName>Other_Speaker_Type__c</fullName>
    <inlineHelpText>If you selected &quot;other&quot; for the speaker type, please define what type of speaker you are using. Can also insert a URL to a blueprint for reference.</inlineHelpText>
    <label>Other Speaker Type</label>
    <type>TextArea</type>
</CustomField>