source/objects/Bluescape_Wall__c/fields/Proxy_Configured__c.field-meta.xml
<CustomField>
    <fullName>Proxy_Configured__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if network is using a proxy</inlineHelpText>
    <label>Proxy Configured</label>
    <type>Checkbox</type>
</CustomField>