source/objects/Bluescape_Wall__c/fields/Sound_Card__c.field-meta.xml
<CustomField>
    <fullName>Sound_Card__c</fullName>
    <description>If AHPC, indicate whether a sound card was installed</description>
    <inlineHelpText>If AHPC, indicate whether a sound card was installed</inlineHelpText>
    <label>Sound Card</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controller_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>