source/objects/Bluescape_Wall__c/fields/Sound_Output__c.field-meta.xml
<CustomField>
    <fullName>Sound_Output__c</fullName>
    <inlineHelpText>Indicate the device the wall is using to output audio</inlineHelpText>
    <label>Sound Output</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboard</fullName>
            </value>
            <value>
                <fullName>PCI Card</fullName>
            </value>
            <value>
                <fullName>Focusrite 2i2</fullName>
            </value>
            <value>
                <fullName>Focusrite 2i2 2.0</fullName>
            </value>
            <value>
                <fullName>Yamaha CS-700</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>