source/objects/Bluescape_Wall__c/fields/Speaker_Type__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Type__c</fullName>
    <inlineHelpText>Indicate the speakers associated with the wall</inlineHelpText>
    <label>Speaker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Customer Provided</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>