source/objects/Bluescape_Wall__c/fields/Supported_Webcam__c.field-meta.xml
<CustomField>
    <fullName>Supported_Webcam__c</fullName>
    <inlineHelpText>If supported, select which webcam is installed on the wall</inlineHelpText>
    <label>Supported Webcam</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Webcam__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Logitech C920</fullName>
            </value>
            <value>
                <fullName>Logitech C930</fullName>
            </value>
            <value>
                <fullName>Panasonic AW-HE2</fullName>
            </value>
            <value>
                <fullName>Unsupported</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>