source/objects/Bluescape_Wall__c/fields/Unsupported_Webcam__c.field-meta.xml
<CustomField>
    <fullName>Unsupported_Webcam__c</fullName>
    <inlineHelpText>If unsupported, enter the make and model of the webcam installed on the wall</inlineHelpText>
    <label>Unsupported Webcam</label>
    <type>TextArea</type>
</CustomField>