source/objects/Bluescape_Wall__c/fields/USB_Card__c.field-meta.xml
<CustomField>
    <fullName>USB_Card__c</fullName>
    <inlineHelpText>If AHPC, indicate what type of USB card is installed</inlineHelpText>
    <label>USB Card</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Controller_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single 4 Port</fullName>
            </value>
            <value>
                <fullName>Dual 2 Port</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>