source/objects/Bluescape_Wall__c/fields/Webcam__c.field-meta.xml
<CustomField>
    <fullName>Webcam__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if there is a webcam installed on the wall</inlineHelpText>
    <label>Webcam</label>
    <type>Checkbox</type>
</CustomField>